// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component should render menu 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="content-"
        aria-expanded="true"
        aria-selected="true"
        data-testid="trigger-menu-UTC"
        id="trigger-"
        tabindex="0"
        type="button"
      >
        Open Menu
      </button>
    </div>
    <div
      class="styles__Content-sc-1eyz3ph-0 fqFVUG"
      data-testid="content-menu-UTC"
      id="content-"
      role="dialog"
      style="padding: 4px 0px; border-radius: 8px; background-color: rgb(255, 255, 255); border: 1px solid #eeeeee; box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.08); top: 8px; left: 0px;"
      tabindex="0"
    >
      <div
        class="styles__MenuWrapper-sc-2jeibh-0 cKmSwv"
        data-testid="menu-dropdown-UTC"
      >
        <div
          class="styles__MenuTitleWrapper-sc-2jeibh-3 gpZKAs"
          data-testid="menu-header-UTC"
        >
          <div
            class="styles__TitleText-sc-2jeibh-5 etVPDR"
          >
             
            Main Menu
             
          </div>
          <div
            class="styles__IconBtn-sc-2jeibh-8 bmlqGw"
          >
            <svg
              class="fk-icon"
              color=""
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Close
              </title>
              <path
                d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="styles__MenuItemsContainer-sc-2jeibh-7 cVJfpM"
          data-testid="menu-items-UTC"
          style="max-height: 100%;"
        >
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 1-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 1
                 
              </div>
            </div>
            <svg
              class="fk-icon"
              color=""
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                ChevronRight
              </title>
              <path
                d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
              />
            </svg>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 2-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 2
                 
              </div>
            </div>
            <svg
              class="fk-icon"
              color=""
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                ChevronRight
              </title>
              <path
                d="M530-481 353-658q-9-9-8.5-21t9.5-21q9-9 21.5-9t21.5 9l198 198q5 5 7 10t2 11q0 6-2 11t-7 10L396-261q-9 9-21 8.5t-21-9.5q-9-9-9-21.5t9-21.5l176-176Z"
              />
            </svg>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 3-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 3
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <button
      aria-controls="content-"
      aria-expanded="true"
      aria-selected="true"
      data-testid="trigger-menu-UTC"
      id="trigger-"
      tabindex="0"
      type="button"
    >
      Open Menu
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu component should trigger click on option click 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="content-"
        aria-expanded="true"
        aria-selected="true"
        data-testid="trigger-menu-UTC"
        id="trigger-"
        tabindex="0"
        type="button"
      >
        Open Menu
      </button>
    </div>
    <div
      class="styles__Content-sc-1eyz3ph-0 fqFVUG"
      data-testid="content-menu-UTC"
      id="content-"
      role="dialog"
      style="padding: 4px 0px; border-radius: 8px; background-color: rgb(255, 255, 255); border: 1px solid #eeeeee; box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.08); top: 8px; left: 0px;"
      tabindex="0"
    >
      <div
        class="styles__MenuWrapper-sc-2jeibh-0 cKmSwv"
        data-testid="menu-dropdown-UTC"
      >
        <div
          class="styles__MenuTitleWrapper-sc-2jeibh-3 gpZKAs"
          data-testid="menu-header-UTC"
        >
          <div
            class="styles__TitleText-sc-2jeibh-5 etVPDR"
          >
             
            Main Menu
             
          </div>
          <div
            class="styles__IconBtn-sc-2jeibh-8 bmlqGw"
          >
            <svg
              class="fk-icon"
              color=""
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Close
              </title>
              <path
                d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="styles__MenuItemsContainer-sc-2jeibh-7 cVJfpM"
          data-testid="menu-items-UTC"
          style="max-height: 100%;"
        >
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 1-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 1
                 
              </div>
            </div>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 2-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 2
                 
              </div>
            </div>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 3-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 3
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <button
      aria-controls="content-"
      aria-expanded="true"
      aria-selected="true"
      data-testid="trigger-menu-UTC"
      id="trigger-"
      tabindex="0"
      type="button"
    >
      Open Menu
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu component should trigger click on option click 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="content-"
        aria-expanded="true"
        aria-selected="true"
        data-testid="trigger-menu-UTC"
        id="trigger-"
        tabindex="0"
        type="button"
      >
        Open Menu
      </button>
    </div>
    <div
      class="styles__Content-sc-1eyz3ph-0 fqFVUG"
      data-testid="content-menu-UTC"
      id="content-"
      role="dialog"
      style="padding: 4px 0px; border-radius: 8px; background-color: rgb(255, 255, 255); border: 1px solid #eeeeee; box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.08); top: 8px; left: 0px;"
      tabindex="0"
    >
      <div
        class="styles__MenuWrapper-sc-2jeibh-0 cKmSwv"
        data-testid="menu-dropdown-UTC"
      >
        <div
          class="styles__MenuTitleWrapper-sc-2jeibh-3 gpZKAs"
          data-testid="menu-header-UTC"
        >
          <div
            class="styles__TitleText-sc-2jeibh-5 etVPDR"
          >
             
            Main Menu
             
          </div>
          <div
            class="styles__IconBtn-sc-2jeibh-8 bmlqGw"
          >
            <svg
              class="fk-icon"
              color=""
              height="20px"
              style="fill: currentColor; stroke: currentColor;"
              viewBox="0 -960 960 960"
              width="20px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Close
              </title>
              <path
                d="M480-438 270-228q-9 9-21 9t-21-9q-9-9-9-21t9-21l210-210-210-210q-9-9-9-21t9-21q9-9 21-9t21 9l210 210 210-210q9-9 21-9t21 9q9 9 9 21t-9 21L522-480l210 210q9 9 9 21t-9 21q-9 9-21 9t-21-9L480-438Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="styles__MenuItemsContainer-sc-2jeibh-7 cVJfpM"
          data-testid="menu-items-UTC"
          style="max-height: 100%;"
        >
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 1-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 1
                 
              </div>
            </div>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 2-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 2
                 
              </div>
            </div>
          </div>
          <div
            class="styles__MenuItemWrapper-sc-2jeibh-1 eQthiW"
            data-disabled="false"
            data-testid="option-item-Option 3-UTC"
          >
            <div
              class="styles__ItemLabelWrapper-sc-2jeibh-4 eLJqgl"
            >
              <svg
                class="fk-icon"
                color=""
                height="20px"
                style="fill: currentColor; stroke: currentColor;"
                viewBox="0 -960 960 960"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Save
                </title>
                <path
                  d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h478q12.444 0 23.722 5T701-822l121 121q8 8 13 19.278 5 11.278 5 23.722v478q0 24-18 42t-42 18H180Zm600-536L656-780H180v600h600v-476ZM479.765-245Q523-245 553.5-275.265q30.5-30.264 30.5-73.5Q584-392 553.735-422.5q-30.264-30.5-73.5-30.5Q437-453 406.5-422.735q-30.5 30.264-30.5 73.5Q376-306 406.265-275.5q30.264 30.5 73.5 30.5ZM263-584h298q12.75 0 21.375-8.625T591-614v-83q0-12.75-8.625-21.375T561-727H263q-12.75 0-21.375 8.625T233-697v83q0 12.75 8.625 21.375T263-584Zm-83-72v476-600 124Z"
                />
              </svg>
              <div
                class="styles__MenuItemText-sc-2jeibh-6 dRVnHE"
              >
                 
                Option 3
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
